--- a/src/styles.css
+++ b/src/styles.css
@@ -89,6 +89,15 @@ h4 {
     background: rgba(0, 150, 136, 0.8);
 }
 
+.contact {
+    padding: 20px;
+    align-content: center;
+}
+
+.contact-1 {
+    padding-top: 20px;
+}
+
 .contact a {
     color: #ffeb3b; /* Yellow Links */
     text-decoration: none;
@@ -122,7 +131,8 @@ h4 {
 }
 
 .download {
-    padding: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .download-btn {
@@ -140,6 +150,11 @@ h4 {
 
 .tooltip:hover .tooltiptext {
     visibility: visible;
+}
+
+.experience {
+    text-align: left;
+    font-size: 0px;
 }
 
 /*.hover {*/
